apps/postgres-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-operator-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    application: postgres-operator-ui
spec:
  rules:
  - host: psql.lab.hq.solidrust.net
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: postgres-operator-ui
              port:
                number: 80
  tls: 
    - hosts: 
        - psql.lab.hq.solidrust.net
      secretName: star.lab.hq.solidrust.net-tls
